version/0.16/_sources/api/solver/_autosummary/settings/solid.rst.txt
:orphan:

.. _solid:

solid
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.solid.solid
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`solid_child <solid_child>`


.. rubric:: Included in:

============================   ======================

Parent                                        Summary

============================   ======================
:ref:`materials <materials>`       'materials' child.

============================   ======================

